update Readme
Updated the README to enhance clarity and detail about the game modes, features, installation steps, and prerequisites.